-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
None
-
Catalog and Routing
-
Fully Compatible
-
ALL
-
CAR Team 2026-06-08
-
🟥 DDL
-
None
-
None
-
None
-
None
-
None
-
None
A recent test regression revealed that under very specific conditions, the op entry generated during the commit of dropDatabase may bring the same ts value (tOpEntry) that gets later recorded within config.placementHistory once the operation gets persisted on the global catalog (tPlacementChange).
This is problematic, since it prevents change streams readers from being correctly resumed at ts; instead, each sharding DDL should always guarantee that tOpEntry < tPlacementChange.
The objective of this ticket is to amend the known regression in dropDatabase and audit the rest of the DDL operations.
- is related to
-
SERVER-113247 Ensure that reshardCollection logs its commit within config.placementHistory with the right timestamp
-
- Closed
-