SERVER-127647 Enforce strict time ordering between a change stream commit event and the related doc in config.placementHistory (#54523)

GitOrigin-RevId: 7b6b14c75783c786ddec648a1ff65a057515e4a2